--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.1.1",
     "@nestjs/passport": "^10.0.2",
-    "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-express": "^10.2.6",
+    "@nestjs/platform-socket.io": "^10.2.6",
+    "@nestjs/websockets": "^10.2.6",
     "@prisma/client": "^5.3.1",
     "bcrypt": "^5.1.1",
     "passport": "^0.6.0",
@@ -35,7 +37,8 @@
     "pg-hstore": "^2.3.4",
     "prisma": "^5.3.1",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "socket.io": "^4.7.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
