--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "prisma": "^5.3.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
-    "socket.io": "^4.7.2"
+    "socket.io": "^4.7.2",
+    "zlib": "^1.0.5"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
