added online user

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,7 @@
 {
   "singleQuote": true,
-  "trailingComma": "all"
+  "semi": true,
+  "trailingComma": "none",
+  "singleAttributePerLine": false,
+  "printWidth": 120
 }
