--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "socket.io": "^4.7.2",
+    "socket.io-stream": "^0.9.1",
     "zlib": "^1.0.5"
   },
   "devDependencies": {
